--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "BigBen",
-  "version": "2.0",
+  "version": "2.5",
   "description": "Bongs every full hour, written in discord.js",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,10 +14,13 @@
   "dependencies": {
     "cleverbot-node": "^0.3.11",
     "discord.js": "^11.1.0",
+    "ffmpeg-binaries": "^3.2.2-3",
     "google-images": "^2.1.0",
     "moment": "^2.18.1",
     "node-schedule": "^1.2.3",
-    "txtgen": "^2.0.1"
+    "opusscript": "0.0.3",
+    "txtgen": "^2.0.1",
+    "ytdl-core": "^0.14.4"
   },
   "false": {}
 }
