--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cleverbot-node": "^0.3.11",
     "discord.js": "^11.1.0",
     "google-images": "^2.1.0",
+    "got": "^7.1.0",
     "node-schedule": "^1.2.3",
     "moment": "^2.18.1",
     "snekfetch": "^3.2.4",
