--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "cleverbot-node": "^0.3.11",
+    "common-tags": "^1.4.0",
     "discord.js": "^11.1.0",
     "google-images": "^2.1.0",
+    "google-translate-api": "^2.3.0",
     "got": "^7.1.0",
     "node-schedule": "^1.2.3",
     "moment": "^2.18.1",
