--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "moment": "^2.18.1",
     "snekfetch": "^3.2.4",
     "txtgen": "^2.0.1",
-    "wikijs": "^3.1.4"
+    "wikijs": "^3.1.4",
+    "youtube-node": "^1.3.2"
   },
   "false": {}
 }
