--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.18.1",
     "node-schedule": "^1.2.3",
     "snekfetch": "^3.2.4",
+    "txtgen": "^2.0.1",
     "wikijs": "^3.1.4",
     "youtube-node": "^1.3.2"
   },
