--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cleverbot-node": "^0.3.11",
     "discord.js": "^11.1.0",
+    "express": "^4.15.3",
     "google-images": "^2.1.0",
     "google-translate-api": "^2.3.0",
     "got": "^7.1.0",
