--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bongs every full hour, written in discord.js",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mako#8739",
   "license": "ISC",
