--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">= 8.1.2"
+  },
   "author": "Mako#8739",
   "license": "ISC",
   "dependencies": {
