--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "kaori": "^1.0.9",
     "moment": "^2.18.1",
     "node-schedule": "^1.2.3",
+    "random-hex": "^1.0.2",
+    "random-puppy": "^1.1.0",
     "snekfetch": "^3.2.4",
     "txtgen": "^2.0.1",
     "wikijs": "^3.1.4",
