--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "Mako#8739",
   "license": "ISC",
   "dependencies": {
+    "booru": "^0.3.3",
     "cleverbot-node": "^0.3.11",
     "danbooru": "^2.0.3",
     "discord.js": "^11.1.0",
-    "express": "^4.15.3",
     "google-images": "^2.1.0",
     "google-translate-api": "^2.3.0",
     "got": "^7.1.0",
