--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "cleverbot-node": "^0.3.11",
     "danbooru": "^2.0.3",
     "discord.js": "^11.1.0",
+    "gifencoder": "^1.1.0",
     "google-images": "^2.1.0",
     "google-translate-api": "^2.3.0",
     "got": "^7.1.0",
+    "jimp": "^0.2.28",
     "moment": "^2.18.1",
     "node-schedule": "^1.2.3",
     "random-hex": "^1.0.2",
