--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "booru": "^0.3.3",
     "cleverbot-node": "^0.3.11",
-    "danbooru": "^2.0.3",
     "discord.js": "^11.1.0",
     "gifencoder": "^1.1.0",
     "google-images": "^2.1.0",
@@ -25,6 +24,7 @@
     "node-schedule": "^1.2.3",
     "random-hex": "^1.0.2",
     "random-puppy": "^1.1.0",
+    "relevant-urban": "^2.0.0",
     "snekfetch": "^3.2.4",
     "txtgen": "^2.0.1",
     "wikijs": "^3.1.4",
