--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "booru": "^0.3.3",
     "cleverbot-node": "^0.3.11",
     "discord.js": "^11.1.0",
+    "dotenv": "^4.0.0",
     "gifencoder": "^1.1.0",
     "google-images": "^2.1.0",
     "google-translate-api": "^2.3.0",
